--- a/.air.toml
+++ b/.air.toml
@@ -12,7 +12,7 @@ cmd = "go build -o ./build/api/main ./cmd/api/main.go"
 bin = "build/api/main"
 # Customize binary.
 full_bin = "APP_ENV=dev APP_USER=air PG_HOST=localhost PG_PORT=5432 \
-            PG_USER=postgres PG_PASSWORD=123456 PG_DATABASE=apidb \
+            PG_USER=rethel PG_PASSWORD=123Qa456 PG_DATABASE=pgtest \
             PG_SSLMODE=disable ./build/api/main"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
